static/style.css
:root {
  --bg: #f4f4f4;
  --cyan: #509c93;
  --light-gray: #eee;
  --gray: #6a6a6a;
  --code: #666;
  --dark: #444;
  --darker: #222;
  --code-bg: #0000000a;
}

html {
  background: var(--bg);
}

::selection {
  background: var(--dark);
  color: var(--bg);
}

* {
  box-sizing: border-box;
  text-decoration: none;
  padding: 0;
  margin: 0;
}

main {
  font-family: "Charter", "Georgia", "Noto Serif", serif;
  font-size: 18px;
  padding: 0;
  line-height: 160%;


  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  grid-column-gap: 1.9rem;
  row-gap: 2rem;
  width: 100%;
}

main article, table {
  flex-grow: 1;
  flex-basis: 80%;
}

main h1 {
  font-size: 25px;
  padding: 10px 0 10px 0;
}

main h2, h3 {
  padding: 20px 0 15px 0;
}

.footer img {
  max-height: 2.5rem;
  max-width: 2.5rem;
  display: inline-block;
  vertical-align: middle;
  image-orientation: from-image;
  padding: 0 0 5px 5px;
  cursor: pointer;
}

a {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
  word-wrap: break-word;
}

main a {
  color: var(--darker);
  text-decoration: underline;
}

table a {
  text-decoration: none;
}

table a:hover {
  text-decoration: underline;
}

body {
  max-width: 640px;
  padding: 0 13px;
  margin: 40px auto;
}

main article img {
  max-width: 100%;
  display: block;
  margin: 0 0 15px 0;
}

main ul, main ol {
  margin: 0 30px 7px 30px;
}

main ul ul {
  margin-bottom: 0
}

.subtitle {
  font-style: italic;
  font-weight: normal;
  font-variant: unset;
  color: var(--dark);
  padding: 0 0 20px 0;
}

.muted {
  color: var(--gray);
}
.muted a {
  color: var(--cyan);
  text-decoration: underline;
}

article p {
  padding: 7px 0 7px 0;
}

article a {
  color: var(--dark);
}

.tagline {
  font-size: 40px;
  font-style: normal;
  padding: 150px 0 150px 0;
  text-align: center;
}

pre {
  overflow-x: auto;
  overflow-y: hidden;
  padding: 10px;
  min-width: 0;
  background-color: var(--code-bg) !important;
  font-size: 15px !important;
  margin-bottom: 10px;
}

code {
  background-color: var(--light-gray);
}

pre > code {
  color: var(--code);
}

.post-date {
  color: var(--gray);
}

table {
  width: 100%;
}

.index-date {
  white-space: nowrap;
  vertical-align: baseline;
  color: var(--gray);
}

.index-post {
  padding-bottom: 7px;
}

header {
  padding-bottom: 20px;
}

hr {
  max-width: 100%;
  text-align: left;
  margin: 20px 0 20px 0;
}

footer {
  padding-top: 30px;
}

.post-date {
  color: var(--gray);
}

blockquote {
  margin: 7px 0 7px 0;
}

blockquote p {
  font-style: italic;
  color: var(--darker);
  padding-left: 20px;
  border-left: 3px solid var(--gray);
}

/* side nav */
nav ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

nav img {
  height: 40px;
  width: 40px;
}

.sidenav {
  flex-basis: 5%;
  text-align: right;
}

